# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .chezmoiremove  .gitattributes  .gitconfig  .gitignore  .gitmodules  .install-1password.sh  .install-prerequisites.ps1  .install-prerequisites.sh  .markdownlint-cli2.jsonc  .shellcheckrc  .taplo.toml  .yarnrc.yml  AGENTS.md  Brewfile  CLAUDE.md  ImportGpgKeys.ps1  Install.ps1  README.md  Set-Environment.ps1  agents.toml  biome.json  bootstrap.sh  dot_default-gems.tmpl  dot_default-python-packages.tmpl  dot_skill-lock.json  dot_tmux.conf  dot_wakatime.cfg.tmpl  import_gpg_keys.sh  install-root  install-root.conf.yaml  install-windows.conf.yaml  install.conf.yaml  install.linux.yaml  install.macos.yaml  install.ps1  install.sh  install.windows.yaml  lefthook.yml  (+8 more)
.agent-of-empires/: config.toml
.agents/: .skill-lock.json  README.md
.chezmoidata/: agents.yaml  biopass.yaml  cli-proxy-api.yaml  docker-credential-helpers.yaml  facts.yaml  fonts.yaml  gnome.yaml  haptic.yaml  kde.yaml  models.yaml  networking.yaml  packages.yaml  pi.yaml  solaar.yaml  system.yaml  user.yaml  vscodium.yaml  wifi.yaml
.chezmoiexternals/: agent-of-empires.toml  ai-agents.toml  antigravity.toml  ast-grep.toml  buf.toml  claude-code.toml  cli-proxy-api.toml  codegraph.toml  codex.toml  dev-tools.toml  docker-credential-helpers.toml  fonts.toml  garden.toml  gh.toml  glab.toml  helm.toml  k8s.toml  kubectl.toml  marksman.toml  minikube.toml  opencode.toml  prezto.toml  system.toml  vcs.toml  virtio-win.toml  wakatime-cli.toml
.chezmoiscripts/00-tools/: run_once_before_mise-trust.sh.tmpl  run_onchange_after_claude.sh.tmpl  run_onchange_after_codegraph.ps1.tmpl  run_onchange_after_codegraph.sh.tmpl  run_onchange_after_codex.sh.tmpl  run_onchange_after_compound-engineering.sh.tmpl  run_onchange_after_meridian.sh.tmpl  run_onchange_after_pi.sh.tmpl  run_onchange_after_winbox-macos.sh.tmpl
.chezmoiscripts/10-auth/: run_once_after_auth-tailscale.sh.tmpl  run_onchange_after_auth-dockerhub.sh.tmpl  run_onchange_after_auth-gitlab.sh.tmpl  (+1 more)
.chezmoitemplates/: agent-mcp-servers-json.tmpl  agents-instructions.tmpl  cli-proxy-api-panel-ref.tmpl  cli-proxy-api-ref.tmpl  compound-engineering-ref.tmpl  config-secrets-key-ensure.tmpl  config-secrets-key.tmpl  facts-gate.sh.tmpl  facts-sh.tmpl  facts-validate.tmpl  facts.tmpl  fingerprint.tmpl  glab-release-ref.tmpl  gnome-guard.sh.tmpl  headless-guard.sh.tmpl  kde-guard.sh.tmpl  opencode-plugins-json.tmpl  resolve-op-refs-json.tmpl  secret-read.tmpl  secrets-bundle.json.asc  secrets-bundle.tmpl  sudo-require-guard.sh.tmpl  sudo-skip-guard.sh.tmpl
.ci/: run-cli-proxy-api-native-smoke.sh  smoke-agy-plugin-installer.sh  smoke-cli-proxy-api.sh  smoke-fedora-nvidia-repo-policy.sh  smoke-ubuntu-studio-audio.sh  test-build-figma-auth.sh  test-cli-proxy-api-infrastructure.sh  test-cli-proxy-api-service.sh  test-open-design-activation.sh  test-open-design-desktop.sh  test-open-design-integration.sh  test-open-design-mcp-render.sh  test-open-design-provision.sh
.fleet/: settings.json
.github/: README.md  WORKFLOWS.md  copilot-instructions.md
agents/: .skill-lock.json  AGENTS.md  README.md  SHARED_AGENTS.md
archinstall/: README.md  initialize-after-boot.sh  initialize-user.sh  initialize.sh  inspect-hardware.sh  post-install.sh  test-host.sh  user_configuration.json  user_credentials.example.json
brew/: Brewfile  dump.sh
codex/: README.md  codex-config.managed.toml  hooks.json
configurations/: gitconfig
containers/: registries.conf
crates/: README.md
crates/mxm4-haptic/: Cargo.toml
crates/mxm4-haptic/src/: lib.rs  main.rs
docs/: README.md  chezmoi-migration.md
dot_agents/: agents.toml  private_readonly_agents.toml.tmpl  readonly_AGENTS.md
dot_claude/: readonly_CLAUDE.md.tmpl
dot_codex/: readonly_AGENTS.md.tmpl
dot_config/: .chezmoiignore
dot_gemini/: readonly_GEMINI.md.tmpl
dot_gnupg/: gpg.conf
dot_kimi-code/: private_readonly_mcp.json.tmpl
dot_ssh/: config.tmpl
dotagents/: .skill-lock.json
dotclaude/: CLAUDE.md  settings.json
dotcodex/: AGENTS.md  config.toml
dotconfig/: .gitignore  chrome-canary-flags.conf  chrome-flags.conf  code-flags.conf  dotnet-tools.json  electron-flags.conf  microsoft-edge-beta-flags.conf  microsoft-edge-stable-flags.conf  touchpadrc
dotgemini/: settings.json
dotssh/: authorized_keys
environment.d/: 82-dotnet.conf  83-firefox.conf
environment.windows.d/: 10-zen.conf
exact_dot_agents/: symlink_dot_skill-lock.json
fedora/: initialize-user.sh  initialize.sh
fonts/: InstallNerdFonts.ps1
git/: .gitconfig  posix.gitconfig  windows.gitconfig
gitconfig.d/: linux.gitconfig  macos.gitconfig  windows.gitconfig
gnupg-windows/: gpg-agent.conf
home/: .bunfig.toml  .chezmoi.toml.tmpl  .chezmoiignore.tmpl  .gitconfig  .npmrc  .yarnrc.yml  .zlogin  .zlogout  .zpreztorc  .zprofile  .zshenv  .zshrc  AGENTS.md  README.md  private_dot_npmrc  private_dot_yarnrc.yml
macos/: configure.sh
mise/: .default-python-packages  config.toml
plans/: 001-ci-verification.md  002-tailscale-auth-failure.md  003-haptic-plugin-spurious-warning.md  004-pin-prezto-external.md  005-notify-bridge-parser-tests.md  README.md
powertoys/: settings_134057767532718638.ptb
private_dot_gnupg/: .gpg-agent.linux.conf  gpg-agent.conf.tmpl
scripts/: README.md  auth-gh.ps1  auth-gh.sh  auth-glab.ps1  auth-tailscale.sh  config-kde.sh  configure-kde-fonts.sh  configure-kde-touchpad.sh  import-gpg-keys.ps1  inject-1password-secrets.ps1  inject-1password-secrets.sh  install-fonts.ps1  install-fonts.sh  install-linux-system-config.sh  install-packages.sh  render-opencode-prompt-append.mjs  render-opencode-prompt-append.ps1  render-opencode-prompt-append.sh  setup-glab.ps1  setup-glab.sh
src/: encrypted_readonly_garden.yaml.age  encrypted_readonly_garden.yaml.asc  readonly_garden.yaml
system/: README.md
vscode/: dump.ps1  dump.sh  extensions.txt  install.ps1  install.sh  keybindings.json  mcp.json  settings.json
winget/: Install.ps1
zsh/: .zpreztorc  .zprofile  .zshenv  .zshrc
(+525 files in other folders)
