[package]
name = "mxm4-haptic"
version = "0.1.0"
edition = "2021"
description = "MX Master 4 haptic daemon + notification bridge + Solaar client, talking HID++ to the Bolt receiver via hidapi (Linux + macOS)"
license = "MIT"

# Shared internals (waveform table, socket protocol, hidraw discovery,
# HID++ packet builders) used by all three binaries below.
[lib]
name = "mxm4_haptic"
path = "src/lib.rs"

# Thin one-shot client spawned by Solaar rules; forwards a waveform to the
# daemon over the AF_UNIX socket and exits.
[[bin]]
name = "mxm4-haptic"
path = "src/bin/mxm4-haptic.rs"

# Desktop-notification -> haptic bridge (eavesdrops the session bus via
# dbus-monitor, forwards to the daemon).
[[bin]]
name = "mxm4-haptic-notify"
path = "src/bin/mxm4-haptic-notify.rs"

# The daemon: sole owner of the hidraw device; native HID++ discovery,
# debounce + paced playback, AF_UNIX server.
[[bin]]
name = "mxm4-hapticd"
path = "src/bin/mxm4-hapticd.rs"

[dependencies]
# Cross-platform raw-HID access. Linux uses the hidraw backend (NOT libusb) so
# the daemon shares the /dev/hidraw node with a running Solaar instead of
# seizing it via a detached kernel driver; macOS uses IOKit opened in shared
# (non-seizing) mode. Only the daemon (mxm4-hapticd) links this; the thin
# client and notify bridge never touch the device, so they stay hidapi-free.
hidapi = { version = "=2.6.5", default-features = false, features = [
    "linux-static-hidraw",
    "macos-shared-device",
] }

# Optimize release binaries for fast cold start and small size. The client
# is invoked once per button-hold from a Solaar rule, so startup latency is
# the metric that matters — not throughput.
[profile.release]
opt-level = "z"   # optimize for size (no hot loops; smaller = faster page-in)
lto = true        # cross-crate inlining; trims dead std paths
codegen-units = 1 # better optimization at the cost of build parallelism
panic = "abort"   # no unwinding tables; we never catch panics
strip = true      # drop symbols; binaries stay ~300 KB instead of ~4 MB
